--- a/cv/languages.tex
+++ b/cv/languages.tex
@@ -10,12 +10,12 @@
 
 %---------------------------------------------------------
   \cvskill
-    {English} % Language
-    {Professional proficiency} % Type
+    {Английский} % Language
+    {Средний} % Type
 
 %---------------------------------------------------------
   \cvskill
-    {Hindi} % Language
-    {Native proficiency} % Type
+    {Русский} % Language
+    {Носитель} % Type
     
 \end{cvskills}
