--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvsection{Навыки}
 
 
 %-------------------------------------------------------------------------------
@@ -11,16 +11,11 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {Python (Pandas, PyTorch, NumPy, Scikit‑learn. etc.), R(ggplot2), PHP, C/C++, HTML/CSS, JavaScript, SQL.} % Skills
-
+    {Hard} % Category
+    {C/C++, GCC, assembly language, CUDA, SSE/AVX, Python (Pandas, TensorFlow, NumPy, Jupiter Notebook, Pandas, MathPlotLib, Django), Linux (Systemd, Threads, TCP/UDP, Bash scripting, utils), verilog, a little bit of systemVerilog, \LaTeX, Git, Docker, Gitlab/CI, Make, CMake, MPI} % Skills
 %---------------------------------------------------------
   \cvskill
-    {Miscellaneous} % Category
-    {Linux, Shell (Bash/Zsh), \LaTeX (Overleaf/R Markdown), Tableau, Microsoft Office, Firebase, Git.} % Skills
-%---------------------------------------------------------
-  \cvskill
-    {Soft Skills} % Category
-    {Time Management, Teamwork, Problem-solving, Documentation, Engaging Presentation.} % Skills
+    {Soft} % Category
+    {Инициативность, обучаемость, ответственность, умение оценивать время выполнения задачи, самоорганизация, работа в команде, готовность помогать, внимание к деталям} % Skills
 
 \end{cvskills}
