--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Personal Profile}
+\cvsection{О~себе}
 
 
 %-------------------------------------------------------------------------------
@@ -10,5 +10,11 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-A University of Leeds graduate student who is enrolled in the Data Science and Analysis programme. Dedicated to software engineering, having two or more years of expertise, and specialising in full-stack web development, algorithms, and machine learning. Searching mostly for Machine Learning, Data Engineer, and Python Development positions.
+Являюсь студентом БГУИР факультета <<Компьютерных систем и сетей>> 4 курса дневной формы обучения. 
+Интересуюсь и работаю в сфере embedded разработки. 
+Обладаю знаниями в области~ЦОС, компьютерных сетей и основами нейронных сетей.
+Активно применяю свои навыки и знания, полученные в университете и самостоятельным путем
+в практических проектах. Отличаюсь инициативностью, умением работать в команде и стремлением к 
+постоянному профессиональному развитию. Готов применять свои знания и навыки для решения сложных задач.
+
 \end{cvparagraph}
