--- a/resume.tex
+++ b/resume.tex
@@ -37,17 +37,17 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Doe}{John}
+\name{Эдвард}{Сенкевич}
 % \position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{YOUR ADDRESS}
+\address{Минск, Беларусь}
 
-\mobile{000000000000}
-\email{thisis@fakeemail.com}
+\mobile{+37544725-35-53}
+\email{sssinkd4@gmail.com}
 %\dateofbirth{January 1st, 1970}
-\homepage{themagicalmammal.vercel.app} 
-\github{themagicalmammal}
-\linkedin{themagicalmammal}
-% \gitlab{gitlab-id}
+%\homepage{themagicalmammal.vercel.app}
+\github{zipkaw}
+\linkedin{edward-senkevich}
+\telegram{wwwvirtually}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
 % \skype{skype-id}
@@ -90,12 +90,12 @@
 \input{cv/experience.tex}
 \input{cv/projects.tex}
 \input{cv/skills.tex}
-\input{cv/achievements.tex}
-\input{cv/publications.tex}
-\input{cv/interests.tex}
+% \input{cv/achievements.tex}
+% \input{cv/publications.tex}
+% \input{cv/interests.tex}
 \input{cv/languages.tex}
 
-\vspace*{\fill}
-\centering{\textbf{References available upon request.}}
+% \vspace*{\fill}
+% \centering{\textbf{References available upon request.}}
 %-------------------------------------------------------------------------------
 \end{document}
