--- a/cv/education.tex
+++ b/cv/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}
+\cvsection{Образование}
 
 
 %-------------------------------------------------------------------------------
@@ -11,39 +11,30 @@
 
 %---------------------------------------------------------
   \cventry
-    {MSc in Data Science and Analysis} % Degree
-    {University of Leeds} % Institution
-    {Leeds, UK} % Location
-    {Sept 2021 - Current} % Date(s)
+    {Факультет <<Компьютерных сетей и систем>>,
+    специальность <<Вычислительные машины системы и сети>>} % Institution
+    {Белорусский государственный университет информатики и радиоэлектроники} % Degree
+    {Минск, Беларусь} % Location
+    {Сентябрь 2020 - настоящее время} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Head of School International Excellence Scholar}
-        \item {Working as a PAL Mentor}
-        \item {\textbf{Courses:} Data Science, Programming for Data Science, Knowledge Representation and Reasoning, Statistical Theory and Methods, Learning Skills through Case Studies, Artificial Intelligence, Machine Learning, Statistical Learning}
-      \end{cvitems}
-    }
-    
-  \cventry
-    {BTech in Information Technology} % Degree
-    {Madhav Institute of Technology and Science} % Institution
-    {Gwalior, India} % Location
-    {May 2016 - May 2020} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Graduated with Distinction}
-        \item {Selected for Industrial Visit among the top of the class} 
-      \end{cvitems}
-    }
-    
-  \cventry
-    {High School} % Degree
-    {Atomic Energy Central School} % Institution
-    {Indore, India} % Location
-    {Apr 2014 - Apr 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Passed with Distinction}
-        \item {Specialised in Physics, Chemistry, and Maths with Computer Science}
+        \item {Состою в лаборатории YADRO}
+        \item {Участвовал в хакатоне от hosters.by, где вместе с командой реализовывали образовательную 
+              платформу для подготовки абитуриентов к экзаменам}
+        \item {Участвовал в хакатоне SoC design challenge от компании YADRO}
+        \item {Прошел стажировку в компании Softarex}
+        \item {\textbf{Пройденные курсы:} 
+              Системное программное обеспечение вычислительных машин,
+              Архитектура персонального компьютера,
+              Интерфейсы и периферийные устройства,
+              Схемотехника,
+              Структурная и функциональная организация ЭВМ,
+              Администрирование и аппаратное обеспечение компьютерных сетей,
+              Системное программное обеспечение компьютерных сетей,
+              Цифровая обработка сигналов и изображений,
+              Микропроцессорные средства и системы,
+              Автоматизация проектирования вычислительных машин и систем
+              }
       \end{cvitems}
     }
 %---------------------------------------------------------
