--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,8 +1,7 @@
 %-------------------------------------------------------------------------------
 % SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Work Experience}
-
+\cvsection{Опыт работы}
 
 %-------------------------------------------------------------------------------
 % CONTENT
@@ -11,18 +10,20 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Engineer} % Job title
-    {Indian Institute of Technology} % Organisation
-    {Indore, India} % Location
-    {Sept 2020 - Aug 2021} % Date(s)
+    {Разработчик ПО для встраиваемых систем} % Job title
+    {AXONIM} % Organisation
+    {Минск, Беларусь} % Location
+    {Май 2023 - настоящее время} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Collaborated with a four-person team to develop a CNN model that utilised YOLO as a foundation to improve the accuracy of ambient lighting conditions in the Mobile net architecture.}
-        \item {Automated and optimised the data handling process for traffic signs, working with Ubuntu 20.04 did shell scripting, and employed other Linux tools.}
-        \item {Significantly boosted the model's accuracy by 60\%, which was yielding an accuracy of 70-78\% under Indian street light. The older models, had an accuracy of 10-15\%.}
-        \item {\textbf{Technical Skills:} Python with PyTorch, NumPy, Matplotlib, Pandas, Scikit-learn, C++, Ubuntu Linux, Linux tools, Apt, Scripting, Git.}
-        \item {\textbf{Soft Skills:} Teamwork, Time Management, Communication, Presentation skills.}
+        \item {Разработка и поддержка драйверов и библиотек для bare-metal ОС}
+        \item {Отладка, профилирование и оптимизация разработанного ПО}
+        \item {Администрирование Linux: написание скриптов, поддержка сервисов, отладка приложений}
+        \item {Работа с измерительным оборудованием, таким как осциллограф, мультиметр, логический анализатор}
+        \item {Работа в команде разработчиков из 4 человек, взаимодействие с разработчиками FPGA части}
+        \item {Доработка CI проекта}
+        \item {Создание окружения для тестирования платформо-независимых модулей}
+        \item {\textbf{Навыки:} С, Bash, CMake, Make, gcc, linker script, assembler, Python, Git, Gitlab/CI, Docker, Unit Testing, TCP/UDP, UART, SPI, IIC, Linux}
       \end{cvitems}
     }
-
 \end{cventries}
