--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{University Projects}
+\cvsection{Проекты}
 
 
 %-------------------------------------------------------------------------------
@@ -11,50 +11,61 @@
 
 %---------------------------------------------------------
   \cventry
-    {University of Leeds} % Organisation
-    {The Relation between GDP and IMR} % Project
-    {Leeds, UK} % Location
-    {Feb 2022 - Apr 2022} % Date(s)
+    {БГУИР} % Organisation
+    {Ext3 undelete} % Project
+    {} % Location
+    {Апрель 2022 - Май 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of project
-        \item {Analysing data from 1960 to 2020 and discover patterns in the data that show trends between Gross domestic product per capita, Infant Mortality rate, Literacy Rate, and Industrial Development.}
-        \item {Study cross‑sectional, longitudinal, and among various countries to find variations in trends and get the historical data to back up the change in the trend of our data.}
-        \item {Specific case studies were traced back to trends seen in the UK and how they affected the GDP and IMR.}
-        \item {\textbf{Technical Skills:} Tableau, Overleaf, LaTeX.}
-        \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Report writing.}
-      \end{cvitems}
-    }
-
-
-%---------------------------------------------------------
-  \cventry
-    {University of Leeds} % Organisation
-    {IPL Analysis} % Project
-    {Leeds, UK} % Location
-    {Nov 2021 - Dec 2021} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of project
-        \item {Analysing data from 2008 to 2015 to discover patterns such as trends, correlations, and probabilities.}
-        \item {Finding the differences between the best teams and players in various fields, as well as their performance on the field and the opponents.}
-        \item {\textbf{Technical Skills:} Python with Pandas, matplotlib, Seaborn.}
-        \item {\textbf{Soft Skills:} Presentation skills, Leadership, Teamwork, Logical Thinking.}
+        \item {Создание программного обеспечения для восстановления файлов используя свойство журналирования файловой системы ext3.}
+        \item {\textbf{Навыки:} C, CMake, Linux utils}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {University of Leeds} % Organisation
-    {Study of the behavior of Serial Killers} % Project
-    {Leeds, UK} % Location
-    {Oct 2021 - Dec 2021} % Date(s)
+    {БГУИР} % Organisation
+    {SIF0 microprocessor} % Project
+    {} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s) of project
-        \item {Study of serial killers behavior with various motives such as convenience (did not want children or spouse), enjoyment, power, escape, or avoiding arrest.}
-        \item {Finding patterns in their starting and ending ages (when they are caught) and other factors of killing, as well as how it varies with different motives.}
-        \item {\textbf{Technical Skills:} R with ggplot2, tidyr, R Markdown.}
-        \item {\textbf{Soft Skills:} Report writing, Logical Thinking, Critical Thinking.}
+        \item {Разработка собственной ISA, для базового набора команд}
+        \item {Разработка микропроцессора c конвеерной обработкой команд}
+        \item {\textbf{Навыки:} Verilog, modelSim, GTKWave, Intel Quartus}
       \end{cvitems}
     }
 
+%--------------------------------------------------------
+    \cventry
+    {БГУИР} % Organisation
+    {Обработка инерциальных датчиков для определения позиции и азимута} % Project
+    {} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of project
+        \item {Исследование существующих методов калибровки инерциальных датчиков}
+        \item {Программная реализация методов калибровки}
+        \item {Разработка библиотеки для калибровки и обработки данных инерциальных датчиков}
+        \item {Использование методов ЦОС фильтрации поступающих данных}
+        \item {\textbf{Навыки:} C, CMake, Python, IIC, UART}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Softarex - стажировка} % Organisation
+    {Restaurant revenue predictor} % Project
+    {} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of project
+        \item {Разработка системы предсказания доходов ресторанов}
+        \item {Исследование моделей машинного обучения для предсказания доходов}
+        \item {Сравнение предсказаний различных моделей на предоставленном датасете}
+        \item {Реализация web-приложения для использования обученной модели пользователем}
+        \item {\textbf{Навыки:} Python, Jupiter Notebook, Pandas, MathPlotLib, NumPy, TensorFlow, Django}
+      \end{cvitems}
+    }
 %---------------------------------------------------------
 \end{cventries}
