--- a/cv/languages.tex
+++ b/cv/languages.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Languages}
+\cvsection{Языки}
 
 %-------------------------------------------------------------------------------
 %	CONTENT
