--- a/cv/education.tex
+++ b/cv/education.tex
@@ -18,7 +18,7 @@
     {Сентябрь 2020 - настоящее время} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Состою в лаборатории YADRO}
+        \item {Являюсь студентом совместной учебной лаборатории Yadro-БГУИР}
         \item {Участвовал в хакатоне от hosters.by, где вместе с командой реализовывали образовательную 
               платформу для подготовки абитуриентов к экзаменам}
         \item {Участвовал в хакатоне SoC design challenge от компании YADRO}
