--- a/cv/languages.tex
+++ b/cv/languages.tex
@@ -11,7 +11,7 @@
 %---------------------------------------------------------
   \cvskill
     {Английский} % Language
-    {Средний} % Type
+    {B1} % Type
 
 %---------------------------------------------------------
   \cvskill
