--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -14,7 +14,7 @@
 Интересуюсь и работаю в сфере embedded разработки. 
 Обладаю знаниями в области~ЦОС, компьютерных сетей и основами нейронных сетей.
 Активно применяю свои навыки и знания, полученные в университете и самостоятельным путем
-в практических проектах. Отличаюсь инициативностью, умением работать в команде и стремлением к 
+в практических проектах. Считаю себя инициативным, умею работать в команде и стремлюсь к 
 постоянному профессиональному развитию. Готов применять свои знания и навыки для решения сложных задач.
 
 \end{cvparagraph}
