--- a/cv/education.tex
+++ b/cv/education.tex
@@ -21,7 +21,7 @@
         \item {Являюсь студентом совместной учебной лаборатории Yadro-БГУИР}
         \item {Участвовал в хакатоне от hosters.by, где вместе с командой реализовывали образовательную 
               платформу для подготовки абитуриентов к экзаменам}
-        \item {Участвовал в хакатоне SoC design challenge от компании YADRO}
+        \item {Участвовал в хакатоне SoC design challenge от компании Yadro}
         \item {Прошел стажировку в компании Softarex}
         \item {\textbf{Пройденные курсы:} 
               Системное программное обеспечение вычислительных машин,
