--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -64,7 +64,7 @@
         \item {Исследование моделей машинного обучения для предсказания доходов}
         \item {Сравнение предсказаний различных моделей на предоставленном датасете}
         \item {Реализация web-приложения для использования обученной модели пользователем}
-        \item {\textbf{Навыки:} Python, Jupiter Notebook, Pandas, MathPlotLib, NumPy, TensorFlow, Django}
+        \item {\textbf{Навыки:} Python, Jupiter Notebook, Pandas, Matplotlib, NumPy, TensorFlow, Django}
       \end{cvitems}
     }
 %---------------------------------------------------------
