--- a/resume.tex
+++ b/resume.tex
@@ -36,7 +36,7 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
-% \photo[rectangle,edge,right]{./examples/profile}
+\photo[rectangle,edge,right]{./images/profile.jpg}
 \name{Эдвард}{Сенкевич}
 % \position{Software Architect{\enskip\cdotp\enskip}Security Expert}
 \address{Минск, Беларусь}
