update gitignore fix syntax

--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Hard} % Category
-    {C/C++, GCC, assembly language, CUDA, SSE/AVX, Python (Pandas, TensorFlow, NumPy, Jupiter Notebook, Pandas, MathPlotLib, Django), Linux (Systemd, Threads, TCP/UDP, Bash scripting, utils), verilog, a little bit of systemVerilog, \LaTeX, Git, Docker, Gitlab/CI, Make, CMake, MPI} % Skills
+    {C/C++, GCC, assembly language, CUDA, SSE/AVX, Python (Pandas, TensorFlow, NumPy, Jupyter Notebook, Pandas, MathPlotLib, Django), Linux (Systemd, Threads, TCP/UDP, Bash scripting, utils), verilog, a little bit of systemVerilog, \LaTeX, Git, Docker, Gitlab/CI, Make, CMake, MPI} % Skills
 %---------------------------------------------------------
   \cvskill
     {Soft} % Category
